<resources>
    <string name="app_name">Let\' sGo</string>
    <string name="activity_details">活动描述.....</string>
    <string name="join_end_activity_time">报名结束时间(必填）</string>
    <string name="join_end_activity_date">报名结束日期(必填）</string>
    <string name="join_start_activity_time">报名时间(必填）</string>
    <string name="join_start_activity_date">报名日期(必填）</string>
    <string name="selectHint">**点击选择日期与时间**</string>
    <string name="end_activity_time">结束时间(必填）</string>
    <string name="end_activity_date">结束日期(必填）</string>
    <string name="start_activity_time">开始时间(必填）</string>
    <string name="start_activity_date">开始日期(必填）</string>
    <string name="activity_theme">活动主题(必填）</string>
    <string name="activity_title">活动标题(必填）</string>
    <string name="activity_address">活动地址</string>

    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
</resources>
