<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ce0080ff"
    tools:context="com.seekman.library.activity.PublishActivity">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/topColor"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:onClick="backContext"
            android:src="@mipmap/ic_back"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="发布活动"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:onClick="publishActivity"
            android:src="@android:drawable/ic_media_play"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanel"
        android:scrollbars="none">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/activity_title"
                    style="@style/dateOrTimeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FFFFFF"
                    android:drawableRight="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/activity_title"
                    android:lines="1"
                    android:maxLines="1"
                    android:minLines="1"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/activity_theme"
                    style="@style/dateOrTimeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FFFFFF"
                    android:gravity="center_vertical"
                    android:text="@string/activity_theme"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/linearlayout_item_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/selectHint"
                    android:textSize="10sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp">


                    <TextView
                        android:id="@+id/start_activity_date"
                        style="@style/dateOrTimeStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:text="@string/start_activity_date"
                        />

                    <TextView
                        android:id="@+id/start_activity_time"
                        style="@style/dateOrTimeStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:gravity="center_vertical"
                        android:text="@string/start_activity_time"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp">

                    <TextView
                        android:id="@+id/end_activity_date"
                        style="@style/dateOrTimeStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:gravity="center_vertical"
                        android:text="@string/end_activity_date"/>

                    <TextView
                        android:id="@+id/end_activity_time"
                        style="@style/dateOrTimeStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:gravity="center_vertical"
                        android:text="@string/end_activity_time"
                        />
                </LinearLayout>

            </LinearLayout>


            <EditText
                android:id="@+id/activity_address"
                style="@style/dateOrTimeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawableLeft="@android:drawable/ic_dialog_map"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/activity_address"
                android:paddingLeft="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/linearlayout_item_style"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/selectHint"
                    android:textSize="10sp"/>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/join_start_activity_date"
                        style="@style/dateOrTimeStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:gravity="center_vertical"
                        android:text="@string/join_start_activity_date"
                        />

                    <TextView
                        android:id="@+id/join_start_activity_time"
                        style="@style/dateOrTimeStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:gravity="center_vertical"
                        android:text="@string/join_start_activity_time"


                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp">

                    <TextView
                        android:id="@+id/join_end_activity_date"
                        style="@style/dateOrTimeStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:gravity="center_vertical"
                        android:text="@string/join_end_activity_date"
                        />

                    <TextView
                        android:id="@+id/join_end_activity_time"
                        style="@style/dateOrTimeStyle"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:gravity="center_vertical"
                        android:text="@string/join_end_activity_time"
                        />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:text=""
                android:id="@+id/activity_details"
                style="@style/dateOrTimeStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@null"
                android:fadeScrollbars="true"
                android:gravity="top"
                android:hint="@string/activity_details"
                android:minLines="5"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                />


            <GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </GridView>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
